[gd_scene load_steps=7 format=3 uid="uid://cx8p4rnqt2m7k"]

[ext_resource type="Script" uid="uid://cp77ly1oceo8h" path="res://scripts/ui/menu_pausa.gd" id="1_pausa"]
[ext_resource type="FontFile" uid="uid://bul4vmew5ma36" path="res://assets/fonts/PressStart2P-Regular.ttf" id="2_ps2p"]
[ext_resource type="Texture2D" uid="uid://cmpqlocsp8l4j" path="res://assets/sprites/ui/menu_pausa/marco_pausa_back.png" id="3_marco"]
[ext_resource type="Texture2D" uid="uid://wy6ji4j1vrdq" path="res://assets/sprites/ui/menu_pausa/boton_redondo_normal.png" id="4_btn_normal"]
[ext_resource type="Texture2D" uid="uid://bgm1h4rt5ka5f" path="res://assets/sprites/ui/menu_pausa/boton_redondo_hover.png" id="5_btn_hover"]
[ext_resource type="Texture2D" uid="uid://myvgg1v2f3w7" path="res://assets/sprites/ui/menu_pausa/boton_redondo_pressed.png" id="6_btn_pressed"]

[node name="MenuPausa" type="CanvasLayer"]
process_mode = 3
layer = 100

[node name="PanelControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pausa")

[node name="FondoOscuro" type="ColorRect" parent="PanelControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.3)

[node name="Marco" type="TextureRect" parent="PanelControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -241.0
offset_top = -222.5
offset_right = 241.0
offset_bottom = 222.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.65, 0.65)
pivot_offset = Vector2(241, 222.5)
mouse_filter = 2
texture = ExtResource("3_marco")
expand_mode = 1
stretch_mode = 5

[node name="ContenedorCentral" type="VBoxContainer" parent="PanelControl/Marco"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 96.38458
offset_top = 17.884613
offset_right = -97.923096
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12
alignment = 1

[node name="BtnReanudar" type="TextureButton" parent="PanelControl/Marco/ContenedorCentral"]
custom_minimum_size = Vector2(270, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("4_btn_normal")
texture_pressed = ExtResource("6_btn_pressed")
texture_hover = ExtResource("5_btn_hover")
stretch_mode = 0

[node name="LabelReanudar" type="Label" parent="PanelControl/Marco/ContenedorCentral/BtnReanudar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_ps2p")
theme_override_font_sizes/font_size = 15
text = "REAUDAR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnAjustes" type="TextureButton" parent="PanelControl/Marco/ContenedorCentral"]
custom_minimum_size = Vector2(270, 0)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_btn_normal")
texture_pressed = ExtResource("6_btn_pressed")
texture_hover = ExtResource("5_btn_hover")
stretch_mode = 0

[node name="LabelAjustes" type="Label" parent="PanelControl/Marco/ContenedorCentral/BtnAjustes"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_ps2p")
theme_override_font_sizes/font_size = 15
text = "AJUSTES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnSalir" type="TextureButton" parent="PanelControl/Marco/ContenedorCentral"]
custom_minimum_size = Vector2(270, 0)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_btn_normal")
texture_pressed = ExtResource("6_btn_pressed")
texture_hover = ExtResource("5_btn_hover")
stretch_mode = 0

[node name="LabelSalir" type="Label" parent="PanelControl/Marco/ContenedorCentral/BtnSalir"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_ps2p")
theme_override_font_sizes/font_size = 15
text = "SALIR AL MENU"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="PanelControl/Marco/ContenedorCentral/BtnReanudar" to="PanelControl" method="_on_btn_reanudar_pressed"]
[connection signal="pressed" from="PanelControl/Marco/ContenedorCentral/BtnAjustes" to="PanelControl" method="_on_btn_ajustes_pressed"]
[connection signal="pressed" from="PanelControl/Marco/ContenedorCentral/BtnSalir" to="PanelControl" method="_on_btn_salir_pressed"]
